--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "rollup",
+    "name": "rollup-server",
     "version": "1.0.0",
     "description": "Rollup Server",
     "main": "src/main.js",
@@ -52,8 +52,10 @@
         "@types/urijs": "^1.19.12",
         "ajv": "^6.12.6",
         "argparse": "^2.0.1",
+        "assert": "^2.0.0",
         "axios": "^0.26.0",
         "body-parser": "^1.19.0",
+        "chai": "^4.3.6",
         "coingecko-api-v3": "^0.0.13",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
@@ -71,23 +73,21 @@
         "mybatis-mapper": "^0.6.7",
         "mysql2": "^2.3.3",
         "node-cron": "^3.0.0",
+        "prettier": "^2.5.1",
+        "prettier-plugin-solidity": "^1.0.0-beta.13",
         "prompt": "^1.3.0",
         "smart-buffer": "^4.1.0",
+        "solhint": "^3.3.6",
+        "solidity-coverage": "^0.8.2",
         "ts-loader": "^9.2.6",
         "ts-node": "^10.5.0",
+        "tslint": "^6.1.3",
+        "tslint-config-prettier": "^1.18.0",
         "typechain": "^5.2.0",
         "typescript": "^4.5.5",
         "urijs": "^1.19.7",
+        "web3": "^1.7.3",
         "winston": "^3.3.3",
-        "yaml-env-defaults": "^1.1.3",
-        "assert": "^2.0.0",
-        "chai": "^4.3.6",
-        "prettier": "^2.5.1",
-        "prettier-plugin-solidity": "^1.0.0-beta.13",
-        "solhint": "^3.3.6",
-        "solidity-coverage": "^0.7.19",
-        "tslint": "^6.1.3",
-        "tslint-config-prettier": "^1.18.0",
-        "web3": "^1.7.3"
+        "yaml-env-defaults": "^1.1.3"
     }
 }
