--- a/config/config.yaml
+++ b/config/config.yaml
@@ -25,6 +25,8 @@ wallet:
 node:
   interval: 600
   max_txs: 256
+  ipfs_api_url: https://api-ipfs.bosagora.info
+  ipfs_gateway_url: https://ipfs.bosagora.info
 
 key_store:
   items:
