--- a/test/service/config.test.yaml
+++ b/test/service/config.test.yaml
@@ -18,3 +18,5 @@ key_store:
 node:
     interval: 10
     max_txs: 8
+    ipfs_api_url: https://api-ipfs.bosagora.info
+    ipfs_gateway_url: https://ipfs.bosagora.info
