--- a/config/config.example.yaml
+++ b/config/config.example.yaml
@@ -27,3 +27,4 @@ node:
   max_txs: 256
   ipfs_api_url: https://api-ipfs.bosagora.info
   ipfs_gateway_url: https://ipfs.bosagora.info
+  ipfs_test: false
