--- a/config/config.yaml
+++ b/config/config.yaml
@@ -25,8 +25,9 @@ wallet:
 node:
   interval: 600
   max_txs: 256
-  ipfs_api_url: https://api-ipfs.bosagora.info
-  ipfs_gateway_url: https://ipfs.bosagora.info
+  ipfs_api_url: http://localhost:5001
+  ipfs_gateway_url: http://localhost:8080
+  ipfs_test: false
 
 key_store:
   items:
