--- a/config/config.yaml
+++ b/config/config.yaml
@@ -25,6 +25,6 @@ wallet:
 node:
   interval: 600
   max_txs: 256
-  ipfs_api_url: http://localhost:5001
-  ipfs_gateway_url: http://localhost:8080
-  ipfs_test: false
+  ipfs_api_url: http://ipfs:5001
+  ipfs_gateway_url: http://ipfs:8080
+  ipfs_test: true
