Added sqlite library

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "@types/mocha": "^9.1.0",
         "@types/node": "^12.20.43",
         "@types/node-cron": "^3.0.1",
+        "@types/sqlite3": "^3.1.8",
         "@types/urijs": "^1.19.12",
         "ajv": "^6.12.6",
         "argparse": "^2.0.1",
@@ -82,6 +83,7 @@
         "smart-buffer": "^4.1.0",
         "solhint": "^3.3.6",
         "solidity-coverage": "^0.8.2",
+        "sqlite3": "^5.1.2",
         "ts-loader": "^9.2.6",
         "ts-node": "^10.5.0",
         "tslint": "^6.1.3",
