--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
         "hardhat-gas-reporter": "^1.0.7",
         "ip": "^1.1.5",
         "ipfs-mini": "^1.1.5",
+        "mkdirp": "^1.0.4",
         "mocha": "^8.0.1",
         "moment": "^2.29.1",
         "mybatis-mapper": "^0.6.7",
