--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
         "body-parser": "^1.19.0",
         "bs58": "^5.0.0",
         "chai": "^4.3.6",
-        "coingecko-api-v3": "^0.0.13",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "ethereum-waffle": "^3.4.0",
@@ -75,16 +74,12 @@
         "ipfs-mini": "^1.1.5",
         "mkdirp": "^1.0.4",
         "mocha": "^8.0.1",
-        "moment": "^2.29.1",
-        "mybatis-mapper": "^0.6.7",
-        "mysql2": "^2.3.3",
         "node-cron": "^3.0.0",
         "prettier": "^2.5.1",
-        "prettier-plugin-solidity": "^1.0.0-beta.13",
+        "prettier-plugin-solidity": "^1.0.0",
         "prompt": "^1.3.0",
         "rollup-pm-sdk": "^1.0.1",
         "smart-buffer": "^4.1.0",
-        "solhint": "^3.3.6",
         "solidity-coverage": "^0.8.2",
         "sqlite3": "^5.1.2",
         "ts-loader": "^9.2.6",
