--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
         "debug:Endpoints": "NODE_ENV=test node_modules/.bin/hardhat test test/service/Endpoints.test.ts",
         "debug:Config": "NODE_ENV=test node_modules/.bin/hardhat test test/service/Config.test.ts",
         "debug:BOA": "NODE_ENV=test node_modules/.bin/hardhat test test/service/BOA.test.ts",
-        "debug:Storage": "NODE_ENV=test node_modules/.bin/hardhat test test/service/Storage.test.ts"
+        "debug:Storage": "NODE_ENV=test node_modules/.bin/hardhat test test/service/Storage.test.ts",
+        "debug:TransactionPool": "NODE_ENV=test node_modules/.bin/hardhat test test/blockchain/TransactionPool.test.ts",
+        "debug:Node": "NODE_ENV=test node_modules/.bin/hardhat test test/blockchain/Node.test.ts"
     },
     "repository": {
         "type": "git",
@@ -60,6 +62,7 @@
         "body-parser": "^1.19.0",
         "bs58": "^5.0.0",
         "chai": "^4.3.6",
+        "class-transformer": "^0.5.1",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "ethereum-waffle": "^3.4.0",
@@ -78,6 +81,7 @@
         "prettier": "^2.5.1",
         "prettier-plugin-solidity": "^1.0.0",
         "prompt": "^1.3.0",
+        "reflect-metadata": "^0.1.13",
         "rollup-pm-sdk": "^1.0.1",
         "smart-buffer": "^4.1.0",
         "solidity-coverage": "^0.8.2",
