--- a/package.json
+++ b/package.json
@@ -62,13 +62,14 @@
         "body-parser": "^1.19.0",
         "bs58": "^5.0.0",
         "chai": "^4.3.6",
+        "chai-http": "^4.3.0",
         "class-transformer": "^0.5.1",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "ethereum-waffle": "^3.4.0",
         "ethers": "^5.6.9",
         "express": "^4.17.1",
-        "express-validator": "^6.14.0",
+        "express-validator": "^6.14.2",
         "extend": "^3.0.2",
         "hardhat": "^2.10.0",
         "hardhat-change-network": "^0.0.7",
