--- a/config/config.yaml
+++ b/config/config.yaml
@@ -31,11 +31,15 @@ scheduler:
     - name: node
       enable: true
       interval: 1
+    - name: send_block
+      enable: true
+      interval: 14
 
 database:
   path: ${DB_PATH}
 
 contracts:
+  rollup_manager_key: ${MANAGER_KEY}
   rollup_address: ${ROLLUP_ADDRESS}
 
 authorization:
