--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "debug:Storage": "NODE_ENV=test node_modules/.bin/hardhat test test/service/Storage.test.ts",
         "debug:TransactionPool": "NODE_ENV=test node_modules/.bin/hardhat test test/blockchain/TransactionPool.test.ts",
         "debug:Node": "NODE_ENV=test node_modules/.bin/hardhat test test/blockchain/Node.test.ts",
+        "debug:Router": "NODE_ENV=test node_modules/.bin/hardhat test test/service/RollupRouter.test.ts",
         "debug:Server": "NODE_ENV=test node_modules/.bin/hardhat test test/service/RollupServer.test.ts"
     },
     "repository": {
@@ -83,7 +84,7 @@
         "prettier-plugin-solidity": "^1.0.0",
         "prompt": "^1.3.0",
         "reflect-metadata": "^0.1.13",
-        "rollup-pm-sdk": "^1.0.1",
+        "rollup-pm-sdk": "^1.0.2",
         "smart-buffer": "^4.1.0",
         "solidity-coverage": "^0.8.2",
         "sqlite3": "^5.1.2",
