--- a/config/config.example.yaml
+++ b/config/config.example.yaml
@@ -21,6 +21,7 @@ logging:
 node:
   interval: 600
   max_txs: 256
+  send_interval: 14
   ipfs_api_url: https://api-ipfs.bosagora.info
   ipfs_gateway_url: https://ipfs.bosagora.info
   ipfs_test: false
