--- a/config/config_test.yaml
+++ b/config/config_test.yaml
@@ -21,6 +21,7 @@ logging:
 node:
   interval: 5
   max_txs: 8
+  send_interval: 1
   ipfs_api_url: http://localhost:5001
   ipfs_gateway_url: http://localhost:8080
   ipfs_test: true
