--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "test": "NODE_ENV=test node_modules/.bin/hardhat test",
         "clean": "NODE_ENV=test node_modules/.bin/hardhat clean",
         "build": "NODE_ENV=test node_modules/.bin/hardhat compile",
-        "start:hardhat": "NODE_ENV=production node_modules/.bin/hardhat run src/main.ts",
+        "start:hardhat": "NODE_ENV=development node_modules/.bin/hardhat run src/main.ts",
         "start:mainnet": "NODE_ENV=production node_modules/.bin/hardhat run src/main.ts --network main_net",
         "start:testnet": "NODE_ENV=production node_modules/.bin/hardhat run src/main.ts --network test_net",
         "start": "NODE_ENV=production node_modules/.bin/hardhat run src/main.ts --network production_net",
