Add a test code that can be tested by all features of Rollup Server

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "debug:BOA": "NODE_ENV=test node_modules/.bin/hardhat test test/service/BOA.test.ts",
         "debug:Storage": "NODE_ENV=test node_modules/.bin/hardhat test test/service/Storage.test.ts",
         "debug:TransactionPool": "NODE_ENV=test node_modules/.bin/hardhat test test/blockchain/TransactionPool.test.ts",
-        "debug:Node": "NODE_ENV=test node_modules/.bin/hardhat test test/blockchain/Node.test.ts"
+        "debug:Node": "NODE_ENV=test node_modules/.bin/hardhat test test/blockchain/Node.test.ts",
+        "debug:Server": "NODE_ENV=test node_modules/.bin/hardhat test test/service/RollupServer.test.ts"
     },
     "repository": {
         "type": "git",
