--- a/package.json
+++ b/package.json
@@ -17,25 +17,25 @@
         "lint": "node_modules/.bin/tslint --config tslint.json \"{src,test}/**/*.ts\"",
         "lint-fix": "node_modules/.bin/tslint --fix --config tslint.json \"{src,test}/**/*.ts\"",
         "prettier": "node_modules/.bin/prettier --write --config .prettierrc 'contracts/**/*.sol' 'test/**/*.ts'",
-        "debug:Endpoints": "NODE_ENV=test node_modules/.bin/hardhat test test/service/Endpoints.test.ts",
         "debug:Config": "NODE_ENV=test node_modules/.bin/hardhat test test/service/Config.test.ts",
         "debug:BOA": "NODE_ENV=test node_modules/.bin/hardhat test test/service/BOA.test.ts",
         "debug:Storage": "NODE_ENV=test node_modules/.bin/hardhat test test/service/Storage.test.ts",
         "debug:TransactionPool": "NODE_ENV=test node_modules/.bin/hardhat test test/blockchain/TransactionPool.test.ts",
         "debug:Node": "NODE_ENV=test node_modules/.bin/hardhat test test/blockchain/Node.test.ts",
+        "debug:SendBlock": "NODE_ENV=test node_modules/.bin/hardhat test test/blockchain/SendBlock.test.ts",
         "debug:Router": "NODE_ENV=test node_modules/.bin/hardhat test test/service/RollupRouter.test.ts",
         "debug:Server": "NODE_ENV=test node_modules/.bin/hardhat test test/service/RollupServer.test.ts"
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/bosagora/rollup.git"
+        "url": "git+https://github.com/bosagora/rollup-server.git"
     },
     "author": "BOSAGORA Foundation",
     "license": "MIT",
     "bugs": {
-        "url": "https://github.com/bosagora/rollup/issues"
+        "url": "https://github.com/bosagora/rollup-server/issues"
     },
-    "homepage": "https://github.com/bosagora/rollup#readme",
+    "homepage": "https://github.com/bosagora/rollup-server#readme",
     "dependencies": {
         "@ethersproject/experimental": "^5.6.3",
         "@nomiclabs/hardhat-ethers": "^2.1.0",
